js262/test/language/module-code/parse-err-decl-pos-import-class-expr-meth-gen.js


/*---
description: Expression cannot contain an `import` declaration
esid: sec-modules
negative:
  phase: parse
  type: SyntaxError
flags: [module]
features: [generators]
---*/

$DONOTEVALUATE();

(class { *method() { import v from './decl-pos-import-class-expr-meth-gen.js'; } });
